# local-market-intelligence-research-api

./: README.md  asset-manifest.json  index.html  local_market_intelligence_researcher_demo.ipynb
python-client/: README.md  pyproject.toml
python-client/examples/: basic_usage.py  multi_market.py
python-client/market_intelligence/: __init__.py  client.py  exceptions.py  models.py  report_generator.py
react-app/: README.md  package-lock.json  package.json
react-app/src/: App.css  App.js
react-app/src/api/: marketIntelligence.js
react-app/src/components/: AnalysisForm.js  CompetitorTable.js  ErrorMessage.js  LoadingState.js  MetricsBar.js  ResultsDashboard.js
react-app/src/utils/: parseMarkdownTable.js
static/css/: main.dcdb47a3.css  main.dcdb47a3.css.map
static/js/: 453.893d7983.chunk.js  453.893d7983.chunk.js.map  main.654fb404.js  main.654fb404.js.map
